css: Fix squished health view in narrow viewports

--- a/public/css/widgets.less
+++ b/public/css/widgets.less
@@ -808,6 +808,10 @@ form.object-features {
     margin-bottom: 4em;
   }
 
+  .icinga-info .vertical-key-value {
+    margin-top: 2em;
+  }
+
   .vertical-key-value .value {
     display: inline-block;
     margin-bottom: .25em;
@@ -853,7 +857,6 @@ form.object-features {
 
   .icinga-health {
     .rounded-corners();
-    margin-bottom: 2em;
     padding: 1em;
     text-align: center;
     width: 100%;
